--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. 
-			<img src=" http://fillmurray.com/200/300">Duis aute irure dolor in reprehenderit in voluptate velit esse
+			<img class="left"  src=" http://fillmurray.com/200/300">Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			</p>
@@ -30,7 +30,7 @@
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			</p>
 
-			<p><img src=" http://fillmurray.com/500/300">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			<p><img class="right" src=" http://fillmurray.com/500/300">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -53,7 +53,7 @@
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			<img src=" http://fillmurray.com/600/800">
+			<img class="left" src=" http://fillmurray.com/600/800">
 			</p>
 
 
@@ -78,13 +78,13 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. <img src=" http://fillmurray.com/200/300">Duis aute irure dolor in reprehenderit in voluptate velit esse
+			consequat. <img class="right" src=" http://fillmurray.com/200/300">Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			</p>
 
 
-			<p>Lorem ipsum dolor sit amet, <img src=" http://fillmurray.com/200/200">consectetur adipisicing elit, sed do eiusmod
+			<p>Lorem ipsum dolor sit amet, <img ckass="left" src=" http://fillmurray.com/200/200">consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -95,7 +95,7 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. <img src=" http://fillmurray.com/300/300"> Duis aute irure dolor in reprehenderit in voluptate velit esse
+			consequat. <img class="right" src=" http://fillmurray.com/300/300"> Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
